# r1-py

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  wrangler.jsonc
scripts/: build.py  setup_pyodide_deps.sh
src/: entry.py  llm.py  models.py  tool_decorator.py  tools.py
stubs/ormsgpack-stub/: pyproject.toml
stubs/ormsgpack-stub/src/ormsgpack/: __init__.py
stubs/xxhash-stub/: pyproject.toml
