[project]
name = "langchain-cloudflare-example"
version = "0.1.0"
description = "Example of using LangChain with Cloudflare Python Workers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webtypy>=0.1.7",
    "langchain-openai>=0.3.35",
    "langchain-core>=0.3.81,<1.0.0",
    "langchain>=0.3.0,<1.0.0",
    "sqlalchemy-cloudflare-d1>=0.3.8",
    # NOTE: Do NOT include pydantic - use Pyodide's built-in version
    # pydantic_core requires compiled Rust binaries that aren't available for WebAssembly
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
    "pytest>=7.0.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.scripts]
# Synchronize dependencies for Pyodide worker
build = "uv run pywrangler sync && bash ./scripts/setup_pyodide_deps.sh"
