[project]
name = "r1-py"
version = "0.1.0"
description = "Example of using LangChain with Cloudflare Python Workers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webtypy>=0.1.7",
    # No langchain deps needed — lightweight llm.py and tool_decorator.py
    # replace langchain-openai and langchain-core using only Python stdlib.
    # NOTE: Do NOT include pydantic - use Pyodide's built-in version
    # pydantic_core requires compiled Rust binaries that aren't available for WebAssembly
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
# Entry point for 'uv run build' if needed
build = "scripts.build:main"
